<resources>
    <string name="app_name">DataCollector</string>
    <string name="jobDescFalse">service currently not running</string>
    <string name="btnSart">start service</string>
    <string name="btnEnd">end service</string>
    <string name="jobDescTrue">service running in background</string>
    <string name="perm1" translatable="false">PACKAGE USAGE STATS</string>
    <string name="perm2" translatable="false">ACTIVITY RECOGNITION</string>
    <string name="perm3" translatable="false"> </string>
    <string name="enblPerm">enable permissions</string>
    <string name="askPermDesc">if all permissions are green, click again the button to go back</string>
</resources>